# BeiMingKungFu

./: .gitignore  CLAUDE.md  FORMAT.md  LICENSE  README.md  pyproject.toml
beiming/: __init__.py  cli.py  core.py  manifest.py  scanner.py
docs/: FOUR-LAYER-MERGE.md
soulport/: __init__.py  cli.py  core.py  doctor.py  llm_config.py  manifest.py  mcp_server.py  scanner.py  semantic_merge.py  watcher.py
tests/: test_core.py  test_doctor.py  test_scanner.py  test_semantic_merge.py  test_watcher.py
