[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beimingkungfu"
version = "0.1.0"
description = "Agent soul transfer — export, absorb, and merge AI agent identities across machines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Polly Wang" },
]
keywords = ["ai", "agent", "migration", "openclaw", "mcp", "soul-transfer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
beiming = "beiming.cli:main"

[project.urls]
Homepage = "https://github.com/Polly2014/BeiMingKungFu"
Repository = "https://github.com/Polly2014/BeiMingKungFu"

[tool.hatch.build.targets.wheel]
packages = ["beiming"]
