[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soulport"
version = "0.6.2"
description = "Agent soul transfer — export, absorb, and merge AI agent identities across machines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Polly Wang" },
]
keywords = ["ai", "agent", "migration", "openclaw", "mcp", "soul-transfer", "soulport"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
cloud = ["httpx>=0.27"]

[project.scripts]
soulport = "soulport.cli:main"
soulport-mcp = "soulport.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Polly2014/SoulPort"
Repository = "https://github.com/Polly2014/SoulPort"

[tool.hatch.build.targets.wheel]
packages = ["soulport"]
